--- a/contact_me.html
+++ b/contact_me.html
@@ -4,3 +4,5 @@
 <p><b>Castle Address</b>: The Tallest Tower, Duloc, Fairy Tale Land</p>
 <p><b>LinkedIn</b>: <i>linkedin.com/in/MightyButMini</i></p>
 <p><b>Website</b>: <i>www.NoOgresAllowed.com</i></p>
+<hr/>
+<p><i>All inquiries regarding the throne or creature banishments may be directed here, but expect royal decree in response!</i></p>
